log
Sun, May  4, 2025  8:09:27 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
5729e4d
Sun, May  4, 2025  8:10:31 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3e8e527
Sun, May  4, 2025  8:13:03 PM: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
9a8e378
Sun, May  4, 2025  8:13:24 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
8578e72
Sun, May  4, 2025  8:13:32 PM: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
92a8a16
Sun, May  4, 2025  8:14:06 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
01a03b8
Sun, May  4, 2025  8:16:40 PM: 
 treemap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
f10f9ab
Sun, May  4, 2025  8:17:21 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
c54c8f1
Sun, May  4, 2025  8:18:25 PM: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
dcd03d4
Sun, May  4, 2025  8:19:53 PM: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
cbbc906
Sun, May  4, 2025  8:21:31 PM: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
e291938
Sun, May  4, 2025  8:29:03 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'minimum':
treemap.c:56:25: error: 'TreeNode' has no member named 'current'
   56 |     TreeNode *actual = x->current;
      |                         ^~
treemap.c:56:15: warning: unused variable 'actual' [-Wunused-variable]
   56 |     TreeNode *actual = x->current;
      |               ^~~~~~
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
f3a4f95
Sun, May  4, 2025  8:31:28 PM: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
04c0cc7
Sun, May  4, 2025  8:33:56 PM: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
f6b13e1
Sun, May  4, 2025  8:34:45 PM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
df9ef44
Sun, May  4, 2025  8:36:56 PM: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|0
503c0ce
Sun, May  4, 2025  8:37:42 PM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
d57796a
Sun, May  4, 2025  8:41:28 PM: 
 treemap.c | 39 +++++++++++++++++++++++++++++++--------
 1 file changed, 31 insertions(+), 8 deletions(-)
 tests:  6|6
total_score: 15/70
68045b1
Sun, May  4, 2025  8:49:41 PM: 
 treemap.c | 45 ++++++++++++++++++---------------------------
 1 file changed, 18 insertions(+), 27 deletions(-)
Compilation failed
test.c: In function 'insertTreeMap':
test.c:503:5: warning: 'main' is normally a non-static function [-Wmain]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:50:15: warning: unused variable 'padre' [-Wunused-variable]
   50 |     TreeNode *padre;
      |               ^~~~~
test.c: At top level:
test.c:503:5: warning: 'main' defined but not used [-Wunused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
82ef727
Sun, May  4, 2025  8:55:03 PM: 
 treemap.c | 16 +++++++---------
 1 file changed, 7 insertions(+), 9 deletions(-)
 tests:  3|7
total_score: 5/70
0f98766
Sun, May  4, 2025  8:55:45 PM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|7
total_score: 5/70
9267128
Sun, May  4, 2025  8:57:52 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
67659fa
